<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>Spookly-Core</artifactId>

    <name>Spookly-Core</name>
    <parent>
        <groupId>de.nehlen</groupId>
        <artifactId>Spookly-Core-Plugin</artifactId>
        <version>${spookly.version}</version>
    </parent>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>clean package install</defaultGoal>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>false</filtering>
                <directory>${basedir}/src/main/resources/</directory>
            </resource>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources-filtered/</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.mongodb</pattern>
                                    <shadedPattern>de.nehlen.dependency.mongodb</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.3-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.nehlen</groupId>
            <artifactId>Spookly-Core-API</artifactId>
            <version>${spookly.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.nehlen</groupId>
            <artifactId>SpooklyCloudNetUtils</artifactId>
            <version>1.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.ipvp</groupId>
            <artifactId>canvas</artifactId>
            <version>1.7.1.B1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-reactivestreams</artifactId>
            <version>${mongodb-driver.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-crypt</artifactId>
            <version>${mongodb-crypt.version}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.springframework.data</groupId>-->
<!--            <artifactId>spring-data-mongodb</artifactId>-->
<!--            <version>4.3.0</version>-->
<!--        </dependency>-->

    </dependencies>
</project>